--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "dependencies": {
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-svelte": "^0.8.0",
+    "envinfo": "^7.8.1",
     "svelte": "^3.48.0"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.47",
-    "svelte-loader": "^3.1.3",
     "svelte-preprocess": "^4.10.6",
     "vite": "^2.9.9"
   },
